--- a/views/skill.ejs
+++ b/views/skill.ejs
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                     <div class="col-sm-5">
-                        <h3 class="mt-5">Dart</h3>
+                        <h3 class="mt-5">Tailwind CSS</h3>
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 45%;" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">45%</div>
                         </div>
