--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/css/style.css">
+        <script src="//code.tidio.co/oslpqmbt5r35yll0nbgefmt2sbmywyhf.js" async></script>
         <title><%=title%></title>
         <style>
             *
